# telegram_fpv

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile_telegram_crawler  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_ml.txt  seeds.txt
src/: config.py  logger.py
src/cli/: main.py
src/crawler/: checkpoints.py  modes.py  worker.py
src/db/: models.py  session.py
src/extractors/: encode.py  media.py
src/filters/: fpv.py
src/label_bot/: bot.py  utils.py
src/ml/: frame_classifier.py  ml_worker.py  predict_augmented.py
src/ml/utils/: frames_from_labels.py
src/reports/: export.py  stats.py
src/store/: fs.py  redis.py  s3.py  storage.py  storage_backend.py
src/tg_client/: client.py  limits.py
src/utils/: cleanup_orphans.py  split_existing_videos.py  video_splitter.py
